# slashsynth

./: .gitignore  CMakeLists.txt  README.md  README.rst  build.py  conanfile.py  conanfile.txt  pyproject.toml  tasks.py
cmake/: CMakeSettings.json.in  SetCompiler.cmake
conan/: CMakeLists.txt  slashsynth.profile  slashsynth.profile.in
conan/recipes/soundio/: config.yml
conan/recipes/soundio/all/: conandata.yml  conanfile.py
conan/recipes/soundio/all/test_package/: CMakeLists.txt  test_package.cpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  reference.rst
docs/_source/: modules.rst  pyslashsynth.rst
docs/slashsynth/: index.rst  version.rst
include/slashsynth/: clock.h  config.h.in  observer.h  output.h  sound.h  utils.h  version.h.in
src/pycxxslashsynth/: binding.cpp
src/pyslashsynth/: __init__.py  cxx.py
src/slashsynth/: lib.cpp  output.cpp
src/slashsynth/app/: main.cpp
tests/: test_common.h
tests/benchmarks/: benchmark_slashsynth.cpp
tests/pyslashsynth/: test_pyslashsynth.py
tests/slashsynth/: test_clock.cpp  test_observer.cpp  test_output.cpp  test_slashsynth.cpp  test_sound.cpp
